fix for button spacing

--- a/src/styles/taskitem.scss
+++ b/src/styles/taskitem.scss
@@ -12,7 +12,7 @@ $taskitem : '.taskitem'; // namespace for component
   }
 
   &__left {
-    margin-top: 10px;
+    margin-top: 15px;
     margin-left: 40px;
     float: left;
   }
@@ -28,13 +28,13 @@ $taskitem : '.taskitem'; // namespace for component
     margin-left: 30px;
     float: left;
     padding: 4px;
-    padding-top: 1px;
+    padding-top: 10px;
   }
 
   &__button {
     float: Right;
     padding: 8px;
-    padding-top: 15px;
+    padding-top: 24px;
   }
 
   &__text {
